--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.1",
+    "classname": "0.0.0",
+    "classnames": "^2.3.1",
+    "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
+    "sass": "^1.34.1",
+    "underscore": "^1.13.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
